# exper_inter_process_channel

./: Cargo.toml  README.md  rust-toolchain.toml
actor/: Cargo.toml
actor/src/: lib.rs
actor_bi_dir_channel/: Cargo.toml
actor_bi_dir_channel.unused/: Cargo.toml
actor_bi_dir_channel.unused/src/: lib.rs
actor_bi_dir_channel/src/: lib.rs  vec_bdlc_pair.rs  vec_bi_dir_local_channels.rs  vec_connection.rs
actor_channel/: Cargo.toml
actor_channel/src/: lib.rs
actor_executor/: Cargo.toml
actor_executor/src/: lib.rs
actor_thread/: Cargo.toml
actor_thread/src/: lib.rs
an_id/: Cargo.toml
an_id/src/: lib.rs
box_msg_any/: Cargo.toml
box_msg_any/src/: lib.rs
client/: Cargo.toml
client/src/: lib.rs
con_mgr/: Cargo.toml
con_mgr/src/: lib.rs
connection_mgr/: Cargo.toml
connection_mgr/src/: lib.rs
echo_complete/: Cargo.toml
echo_complete/src/: lib.rs
echo_protocol/: Cargo.toml
echo_protocol/src/: lib.rs
echo_reply/: Cargo.toml
echo_reply/src/: lib.rs
echo_req/: Cargo.toml
echo_req/src/: lib.rs
echo_req_reply_protocol/: Cargo.toml
echo_req_reply_protocol/src/: lib.rs
echo_requestee_protocol/: Cargo.toml
echo_requestee_protocol/src/: lib.rs
echo_requester_protocol/: Cargo.toml
echo_requester_protocol/src/: lib.rs
echo_start/: Cargo.toml
echo_start/src/: lib.rs
echo_start_complete_protocol/: Cargo.toml
echo_start_complete_protocol/src/: lib.rs
incremental_select/: Cargo.toml  README.md
incremental_select/src/: main.rs
manager/: Cargo.toml
manager/src/: lib.rs
msg1/: Cargo.toml
msg1/src/: lib.rs
msg2/: Cargo.toml
msg2/src/: lib.rs
msg_header/: Cargo.toml
msg_header/src/: get_msg_id_str_from_buf.rs  lib.rs
msg_local_macro/: Cargo.toml
msg_local_macro/src/: lib.rs
msg_macro/: Cargo.toml
msg_macro/src/: lib.rs  main.rs
msg_router_dispatcher/: Cargo.toml  README.md
msg_router_dispatcher/src/: lib.rs
msg_router_forwarder/: Cargo.toml  README.md
msg_router_forwarder/src/: lib.rs
msg_router_receiver/: Cargo.toml  README.md
msg_router_receiver/src/: lib.rs
msg_serde_json/: Cargo.toml
msg_serde_json/src/: lib.rs
msg_serde_macro/: Cargo.toml
msg_serde_macro/src/: lib.rs
msgs/cmd_done/: Cargo.toml
msgs/cmd_done/src/: lib.rs
msgs/cmd_init/: Cargo.toml
msgs/cmd_init/src/: lib.rs
msgs/con_mgr_add_actor/: Cargo.toml
msgs/con_mgr_add_actor/src/: lib.rs
msgs/echo_complete/: Cargo.toml
msgs/echo_complete/src/: lib.rs
msgs/echo_reply/: Cargo.toml
msgs/echo_req/: Cargo.toml
msgs/echo_req/src/: lib.rs
msgs/echo_rsp/: Cargo.toml
msgs/echo_rsp/src/: lib.rs
msgs/echo_start/: Cargo.toml
msgs/echo_start/src/: lib.rs
msgs/insert_key_msg_id_value_from_serde_json_buf_req/: Cargo.toml
msgs/insert_key_msg_id_value_from_serde_json_buf_req/src/: lib.rs
msgs/insert_key_msg_id_value_from_serde_json_buf_rsp/: Cargo.toml
msgs/insert_key_msg_id_value_from_serde_json_buf_rsp/src/: lib.rs
msgs/insert_key_msg_id_value_to_serde_json_buf_req/: Cargo.toml
msgs/insert_key_msg_id_value_to_serde_json_buf_req/src/: lib.rs
msgs/insert_key_msg_id_value_to_serde_json_buf_rsp/: Cargo.toml
msgs/insert_key_msg_id_value_to_serde_json_buf_rsp/src/: lib.rs
msgs/msg1/: Cargo.toml
msgs/msg1/src/: lib.rs
msgs/msg2/: Cargo.toml
msgs/msg2/src/: lib.rs
msgs/msg_deser_req/: Cargo.toml
msgs/msg_deser_req/src/: lib.rs
msgs/msg_deser_rsp/: Cargo.toml
msgs/msg_deser_rsp/src/: lib.rs
msgs/msg_router_forwarder_actor_sender_req/: Cargo.toml
msgs/msg_router_forwarder_actor_sender_req/src/: lib.rs
msgs/msg_router_forwarder_actor_sender_rsp/: Cargo.toml
msgs/msg_router_forwarder_actor_sender_rsp/src/: lib.rs
msgs/req_add_actor/: Cargo.toml
msgs/req_add_actor/src/: lib.rs
msgs/req_protocol_set/: Cargo.toml
msgs/req_their_bi_dir_channel/: Cargo.toml
msgs/req_their_bi_dir_channel.unused/: Cargo.toml
msgs/rsp_add_actor/: Cargo.toml
msgs/rsp_add_actor/src/: lib.rs
msgs/rsp_protocol_set/: Cargo.toml
msgs/rsp_their_bi_dir_channel/: Cargo.toml
msgs/rsp_their_bi_dir_channel.unused/: Cargo.toml
msgs/rsp_their_bi_dir_channel/src/: lib.rs
msgs/unused1/: Cargo.toml
msgs/unused1/src/: lib.rs
msgs/unused2/: Cargo.toml
name_id/: Cargo.toml
name_id/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol_set/: Cargo.toml
protocol_set/src/: lib.rs
protocols/actor_executor_protocol/: Cargo.toml
protocols/cmd_done_issuee_protocol/: Cargo.toml
protocols/cmd_done_issuer_protocol/: Cargo.toml
protocols/cmd_init_issuee_protocol/: Cargo.toml
protocols/cmd_init_issuer_protocol/: Cargo.toml
protocols/cmd_init_protocol/: Cargo.toml
protocols/con_mgr_connect_protocol/: Cargo.toml
protocols/con_mgr_query_protocol/: Cargo.toml
protocols/con_mgr_register_actor/: Cargo.toml
protocols/con_mgr_register_actor_protocol/: Cargo.toml
protocols/echo_requestee_protocol/: Cargo.toml
protocols/echo_requester_protocol/: Cargo.toml
protocols/echo_start_complete_protocol/: Cargo.toml
protocols/insert_key_msg_id_value_from_serde_json_buf_requestee_protocol/: Cargo.toml
protocols/insert_key_msg_id_value_from_serde_json_buf_requester_protocol/: Cargo.toml
protocols/insert_key_msg_id_value_to_serde_json_buf_requestee_protocol/: Cargo.toml
protocols/insert_key_msg_id_value_to_serde_json_buf_requester_protocol/: Cargo.toml
protocols/msg_deser_requestee_protocol/: Cargo.toml
protocols/msg_deser_requester_protocol/: Cargo.toml
protocols/msg_router_forwarder_actor_sender_requestee_protocol/: Cargo.toml
protocols/msg_router_forwarder_actor_sender_requester_protocol/: Cargo.toml
sender_map_by_instance_id/: Cargo.toml
sender_map_by_instance_id/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
sm/: Cargo.toml
sm/src/: lib.rs
sm_channel_to_network/: Cargo.toml
sm_channel_to_network/src/: lib.rs
sm_network_to_channel/: Cargo.toml
sm_network_to_channel/src/: lib.rs
src/: main.rs
tests/: test.rs  test_msg_router_forwarder_dispatcher.rs  test_msg_serde_proof_of_concept.rs
utils/: Cargo.toml  README.md
utils/src/: lib.rs
(+26 files in other folders)
