[package]
name = "exper_inter_process_channel"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
an_id = { path="an_id" }
msg1 = { path="msgs/msg1" }
msg2 = { path="msgs/msg2" }

[workspace]
members = [
    "box_msg_any",
    "actor",
    "actor_executor",
    "con_mgr",
    "protocol_set",
    "protocol",
    "sender_map_by_instance_id",
    "msg_header",
    "msgs/msg1",
    "msgs/msg2",
    "msgs/cmd_done",
    "msgs/req_add_actor",
    "msgs/rsp_add_actor",
    "msgs/echo_complete",
    "msgs/echo_rsp",
    "msgs/echo_req",
    "msgs/echo_start",
    "name_id",
    "an_id",
    "protocols/actor_executor_protocol",
    "protocols/cmd_init_protocol",
    "protocols/con_mgr_register_actor_protocol",
    "protocols/con_mgr_query_protocol",
    "protocols/echo_start_complete_protocol",
    "protocols/echo_requester_protocol",
    "protocols/echo_requestee_protocol",
    "msg_local_macro",
    "msg_serde_macro",
    "client",
    "server",
    "incremental_select",
]

[features]
default = []
nightly-build = []

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Wink Saville <wink@saville.com>" ]
