[package]
name = "exper_inter_process_channel"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "utils" }
box_msg_any = { path = "box_msg_any" }
actor = { path="actor" }
actor_channel = { path="actor_channel" }
actor_executor = { path="actor_executor" }
con_mgr = { path="con_mgr" }
protocol_set = { path="protocol_set" }
protocol = { path="protocol" }
sender_map_by_instance_id = { path="sender_map_by_instance_id" }
echo_start_complete_protocol = { path="protocols/echo_start_complete_protocol" }
echo_requester_protocol = { path="protocols/echo_requester_protocol" }
echo_requestee_protocol = { path="protocols/echo_requestee_protocol" }
cmd_init_issuee_protocol = { path="protocols/cmd_init_issuee_protocol" }
cmd_init_issuer_protocol = { path="protocols/cmd_init_issuer_protocol" }
cmd_done_issuee_protocol = { path="protocols/cmd_done_issuee_protocol" }
cmd_done_issuer_protocol = { path="protocols/cmd_done_issuer_protocol" }
actor_executor_protocol = { path="protocols/actor_executor_protocol" }
con_mgr_register_actor_protocol = { path="protocols/con_mgr_register_actor_protocol" }
con_mgr_query_protocol = { path="protocols/con_mgr_query_protocol" }
echo_start = { path="msgs/echo_start" }
echo_complete = { path="msgs/echo_complete" }
echo_req = { path="msgs/echo_req" }
echo_rsp = { path="msgs/echo_rsp" }
msg_router_dispatcher = { path= "msg_router_dispatcher" }
msg_router_forwarder = { path= "msg_router_forwarder" }
msg_header = { path="msg_header" }
msg1 = { path="msgs/msg1" }
msg2 = { path="msgs/msg2" }
cmd_done = { path="msgs/cmd_done" }
req_add_actor = { path="msgs/req_add_actor" }
rsp_add_actor = { path="msgs/rsp_add_actor" }
name_id = { path="name_id" }
an_id = { path="an_id" }
client = { path="client" }
server = { path="server" }
uuid = "1.3.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
custom_logger = { git = "https://github.com/winksaville/custom_logger", version = "0.2.0" }
crossbeam-channel = "0.5.7"
insert_key_msg_id_value_from_serde_json_buf_requester_protocol = { path="protocols/insert_key_msg_id_value_from_serde_json_buf_requester_protocol" }
insert_key_msg_id_value_to_serde_json_buf_requester_protocol = { path="protocols/insert_key_msg_id_value_to_serde_json_buf_requester_protocol" }
msg_router_forwarder_actor_sender_requester_protocol = { path="protocols/msg_router_forwarder_actor_sender_requester_protocol" }

[workspace]
members = [
    "utils",
    "box_msg_any",
    "actor",
    "actor_executor",
    "con_mgr",
    "protocol_set",
    "protocol",
    "sender_map_by_instance_id",
    "msg_header",
    "msg_router_dispatcher",
    "msg_router_forwarder",
    "msgs/msg1",
    "msgs/msg2",
    "msgs/cmd_done",
    "msgs/req_add_actor",
    "msgs/rsp_add_actor",
    "msgs/echo_complete",
    "msgs/echo_rsp",
    "msgs/echo_req",
    "msgs/echo_start",
    "msgs/insert_key_msg_id_value_from_serde_json_buf_req",
    "msgs/insert_key_msg_id_value_from_serde_json_buf_rsp",
    "msgs/insert_key_msg_id_value_to_serde_json_buf_req",
    "msgs/insert_key_msg_id_value_to_serde_json_buf_rsp",
    "msgs/msg_router_forwarder_actor_sender_req",
    "msgs/msg_router_forwarder_actor_sender_rsp",
    "name_id",
    "an_id",
    "protocols/actor_executor_protocol",
    "protocols/cmd_init_issuee_protocol",
    "protocols/cmd_init_issuer_protocol",
    "protocols/cmd_done_issuee_protocol",
    "protocols/cmd_done_issuer_protocol",
    "protocols/con_mgr_register_actor_protocol",
    "protocols/con_mgr_query_protocol",
    "protocols/echo_start_complete_protocol",
    "protocols/echo_requester_protocol",
    "protocols/echo_requestee_protocol",
    "protocols/insert_key_msg_id_value_from_serde_json_buf_requestee_protocol",
    "protocols/insert_key_msg_id_value_from_serde_json_buf_requester_protocol",
    "protocols/insert_key_msg_id_value_to_serde_json_buf_requestee_protocol",
    "protocols/insert_key_msg_id_value_to_serde_json_buf_requester_protocol",
    "protocols/msg_router_forwarder_actor_sender_requestee_protocol",
    "protocols/msg_router_forwarder_actor_sender_requester_protocol",
    "msg_local_macro",
    "msg_serde_macro",
    "client",
    "server",
    "incremental_select",
]

[features]
default = []
nightly-build = []

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Wink Saville <wink@saville.com>" ]
