[package]
name = "actor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.7"
msg_header = { version = "0.1.0", path = "../msg_header" }
#protocol = { version = "0.1.0", path = "../protocol" }
protocol_set = { version = "0.1.0", path = "../protocol_set" }
uuid = { version = "1.3.0", features = ["v4"] }
