[package]
name = "actor_executor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor = { version = "0.1.0", path = "../actor" }
actor_bi_dir_channel = { version = "0.1.0", path = "../actor_bi_dir_channel" }
crossbeam-channel = "0.5.7"
msg_header = { version = "0.1.0", path = "../msg_header" }
req_add_actor = { version = "0.1.0", path = "../msgs/req_add_actor" }
rsp_add_actor = { version = "0.1.0", path = "../msgs/rsp_add_actor" }
cmd_done = { version = "0.1.0", path = "../msgs/cmd_done" }
req_their_bi_dir_channel = { version = "0.1.0", path = "../msgs/req_their_bi_dir_channel" }
rsp_their_bi_dir_channel = { version = "0.1.0", path = "../msgs/rsp_their_bi_dir_channel" }
connection_mgr = { version = "0.1.0", path = "../connection_mgr" }

[dev-dependencies]
cmd_done = { path = "../msgs/cmd_done" }
echo_requestee_protocol = { path = "../protocols/echo_requestee_protocol" }
echo_start_complete_protocol = { path = "../protocols/echo_start_complete_protocol" }
protocol_set = { version = "0.1.0", path = "../protocol_set" }
server = { path = "../server" }
client = { path = "../client" }
