[package]
name = "actor_executor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
box_msg_any = { version = "0.1.0", path = "../box_msg_any" }
an_id = { version = "0.1.0", path = "../an_id" }
actor = { version = "0.1.0", path = "../actor" }
actor_channel = { version = "0.1.0", path = "../actor_channel" }
crossbeam-channel = "0.5.7"
msg_header = { version = "0.1.0", path = "../msg_header" }
req_add_actor = { version = "0.1.0", path = "../msgs/req_add_actor" }
rsp_add_actor = { version = "0.1.0", path = "../msgs/rsp_add_actor" }
con_mgr = { version = "0.1.0", path = "../con_mgr" }
con_mgr_query_protocol = { version = "0.1.0", path = "../protocols/con_mgr_query_protocol" }
cmd_done_issuee_protocol = { version = "0.1.0", path = "../protocols/cmd_done_issuee_protocol" }
cmd_init_issuer_protocol = { version = "0.1.0", path = "../protocols/cmd_init_issuer_protocol" }
protocol_set = { version = "0.1.0", path = "../protocol_set" }
uuid = "1.3.0"
protocol = { version = "0.1.0", path = "../protocol" }
actor_executor_protocol = { version = "0.1.0", path = "../protocols/actor_executor_protocol" }
con_mgr_register_actor_protocol = { version = "0.1.0", path = "../protocols/con_mgr_register_actor_protocol" }
sender_map_by_instance_id = { version = "0.1.0", path = "../sender_map_by_instance_id" }

[dev-dependencies]
an_id = { version = "0.1.0", path = "../an_id" }
cmd_done_issuer_protocol = { version = "0.1.0", path = "../protocols/cmd_done_issuer_protocol" }
echo_requestee_protocol = { path = "../protocols/echo_requestee_protocol" }
echo_start_complete_protocol = { path = "../protocols/echo_start_complete_protocol" }
protocol_set = { version = "0.1.0", path = "../protocol_set" }
server = { path = "../server" }
client = { path = "../client" }
