[package]
name = "an_id"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.12"
serde = { version = "1.0.154", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }
