[package]
name = "client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msg_header = { path="../msg_header" }
actor = { version = "0.1.0", path = "../actor" }
chrono = "0.4.23"
protocol = { version = "0.1.0", path = "../protocol" }
uuid = "1.3.0"
echo_requester_protocol = { version = "0.1.0", path = "../protocols/echo_requester_protocol" }
echo_requestee_protocol = { version = "0.1.0", path = "../protocols/echo_requestee_protocol" }
echo_start_complete_protocol = { version = "0.1.0", path = "../protocols/echo_start_complete_protocol" }
msg1 = { path = "../msgs/msg1" }
msg2 = { path = "../msgs/msg2" }
protocol_set = { version = "0.1.0", path = "../protocol_set" }
crossbeam-channel = "0.5.7"
an_id = { version = "0.1.0", path = "../an_id" }

[dev-dependencies]
actor_bi_dir_channel = { path = "../actor_bi_dir_channel" }
msg_header = { path = "../msg_header" }
server = { path = "../server" }
