[package]
name = "con_mgr"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
box_msg_any = { version = "0.1.0", path = "../box_msg_any" }
an_id = { version = "0.1.0", path = "../an_id" }
msg_header = { path="../msg_header" }
actor = { path="../actor" }
actor_channel = { path="../actor_channel" }
protocol_set = { path="../protocol_set" }
echo_requestee_protocol = { version = "0.1.0", path = "../protocols/echo_requestee_protocol" }
con_mgr_register_actor_protocol = { version = "0.1.0", path = "../protocols/con_mgr_register_actor_protocol" }
con_mgr_query_protocol = { version = "0.1.0", path = "../protocols/con_mgr_query_protocol" }
chrono = "0.4.23"
protocol = { version = "0.1.0", path = "../protocol" }
uuid = "1.3.0"
crossbeam-channel = "0.5.7"
cmd_init_protocol = { path = "../protocols/cmd_init_protocol" }
sender_map_by_instance_id = { path = "../sender_map_by_instance_id" }
once_cell = "1.17.1"

[dev-dependencies]
client = { path = "../client" }
server = { path = "../server" }
echo_requester_protocol = { path = "../protocols/echo_requester_protocol" }
echo_start_complete_protocol = { path = "../protocols/echo_start_complete_protocol" }
