[package]
name = "echo_complete"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
msg_header = { path = "../msg_header" }
msg_macro = { path = "../msg_macro" }
msg_serde_json = { path = "../msg_serde_json" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["serde"] }
