[package]
name = "incremental_select"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["select_immutable"]
simple = []
rc_refcell = []
select_immutable = []

[dependencies]
msg_header = { path="../msg_header" }
crossbeam-channel = "0.5.6"

[dev-dependencies]
