[package]
name = "manager"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor = { version = "0.1.0", path = "../actor" }
msg_header = { version = "0.1.0", path = "../msg_header" }
protocol = { version = "0.1.0", path = "../protocol" }
protocol_set = { version = "0.1.0", path = "../protocol_set" }
uuid = "1.3.0"

[dev-dependencies]
client = { path = "../client" }
#echo_complete = { path = "../echo_complete" }
#echo_reply = { path = "../echo_reply" }
#echo_req = { path = "../echo_req" }
#echo_req_reply_protocol = { path = "../echo_req_reply_protocol" }
#echo_start = { path = "../echo_start" }
#echo_start_complete_protocol = { path = "../echo_start_complete_protocol" }
server = { path = "../server" }
