[package]
name = "manager"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor = { version = "0.1.0", path = "../actor" }
msg_header = { version = "0.1.0", path = "../msg_header" }
protocol = { version = "0.1.0", path = "../protocol" }
protocol_set = { version = "0.1.0", path = "../protocol_set" }
uuid = "1.3.0"

[dev-dependencies]
client = { path = "../client" }
crossbeam-channel = "0.5.6"
server = { path = "../server" }
