[package]
name = "msg2"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msg_header = { path="../msg_header" }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.91"
