[package]
name = "msg_header"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
an_id = { version = "0.1.0", path = "../an_id" }
box_msg_any = { version ="0.1.0", path="../box_msg_any" }
actor_channel = { version = "0.1.0", path="../actor_channel" }
sender_map_by_instance_id = { version = "0.1.0", path = "../sender_map_by_instance_id" }
serde = { version = "1.0.154", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde"] }
paste = "1.0.12"
rustversion = "1.0.12"
