[package]
name = "msg_router_dispatcher"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
box_msg_any = { version = "0.1.0", path = "../box_msg_any" }
an_id = { version = "0.1.0", path = "../an_id" }
msg_header = { path="../msg_header" }
protocol_set = { path="../protocol_set" }
echo_requestee_protocol = { version = "0.1.0", path = "../protocols/echo_requestee_protocol" }
insert_key_msg_id_value_from_serde_json_buf_requestee_protocol = { version = "0.1.0", path = "../protocols/insert_key_msg_id_value_from_serde_json_buf_requestee_protocol" }
actor = { path="../actor" }
actor_channel = { path="../actor_channel" }
chrono = "0.4.23"
protocol = { version = "0.1.0", path = "../protocol" }
uuid = "1.3.0"
crossbeam-channel = "0.5.7"
cmd_init_issuee_protocol = { version = "0.1.0", path = "../protocols/cmd_init_issuee_protocol" }
cmd_done_issuee_protocol = { path = "../protocols/cmd_done_issuee_protocol" }
con_mgr_register_actor_protocol = { version = "0.1.0", path = "../protocols/con_mgr_register_actor_protocol" }
sender_map_by_instance_id = { version = "0.1.0", path = "../sender_map_by_instance_id" }
utils = { path = "../utils" }

[dev-dependencies]
actor_executor = { path="../actor_executor" }
cmd_done_issuer_protocol = { path = "../protocols/cmd_done_issuer_protocol" }
