[package]
name = "msg_serde_json"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
msg_header = { path = "../msg_header" }

[dev-dependencies]
uuid = "1.2.2"
