[package]
name = "msg_serde_macro"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_logger = { git = "https://github.com/winksaville/custom_logger", version = "0.2.0" }
log = "0.4.17"
msg_header = { path="../msg_header" }
msg_serde_json = { path="../msg_serde_json" }
paste = "1.0.12"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.3.0", features = ["serde"] }
