[package]
name = "protocol"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msg_header = { version = "0.1.0", path = "../msg_header" }
uuid = "1.3.0"

[dev-dependencies]
uuid = { version = "1.3.0", features = ["v4"] }
