[package]
name = "protocol"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
an_id = { version = "0.1.0", path = "../an_id" }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
msg_header = { version = "0.1.0", path = "../msg_header" }
