[package]
name = "sender_map_by_instance_id"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
box_msg_any = { version = "0.1.0", path = "../box_msg_any" }
an_id = { version = "0.1.0", path = "../an_id" }
actor_channel = { path="../actor_channel" }
once_cell = "1.17.1"

[dev-dependencies]
#actor = { path = "../actor" }
actor_channel = { path = "../actor_channel" }
#client = { path = "../client" }
#server = { path = "../server" }
#echo_requester_protocol = { path = "../protocols/echo_requester_protocol" }
#echo_start_complete_protocol = { path = "../protocols/echo_start_complete_protocol" }
