[package]
name = "server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msg_header = { path="../msg_header" }
echo_req = { path="../echo_req" }
echo_reply = { path="../echo_reply" }
sm = { path="../sm" }
chrono = "0.4.23"

[dev-dependencies]
msg1 = { path="../msg1" }
#msg2 = { path="../msg2" }
