[package]
name = "server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msg_header = { path="../msg_header" }
protocol_set = { path="../protocol_set" }
echo_req_reply_protocol = { version = "0.1.0", path = "../echo_req_reply_protocol" }
echo_req = { path="../echo_req" }
echo_reply = { path="../echo_reply" }
actor = { path="../actor" }
chrono = "0.4.23"
protocol = { version = "0.1.0", path = "../protocol" }
uuid = "1.3.0"
