[package]
name = "cmd_init"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
an_id = { version = "0.1.0", path = "../../an_id" }
msg_header = { path = "../../msg_header" }
msg_serde_macro = { path = "../../msg_serde_macro" }
msg_serde_json = { path = "../../msg_serde_json" }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.3.0", features = ["serde"] }
